src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    background-image: url(/src/bgPattern.png);
    font-family: 'Orbitron';
    overflow: hidden;
}

img {
    width: 100%;
}

#root {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

.container {
    width: 100%;
    justify-content: center;
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 40px;
    margin-top: 20px;
}

.score-bar {
    display: flex;
    width: 100%;
    justify-content: space-around;
    font-weight: 400;
}

.display-area {
    display: flex;
    width: 100%;
    padding: 25px 50px;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.display-area .win-message {
    font-size: 22px;
}

.grid {
    display: flex;
    width: 40%;
    height: 45%;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
    border-radius: 12px;
    background-image: linear-gradient( 109.6deg, rgba(96, 221, 142, 1) 11.2%, rgba(24, 138, 141, 1) 91.1%);
    gap: 1rem;
}

.cell {
    width: 22%;
    border-radius: 12px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #0c3939;
    box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.4);
}

svg {
    width: 80%;
    height: 80%;
}

.restart {
    padding: 8px 10px;
    border-radius: 5px;
    color: white;
    background-color: red;
    outline: none;
    border: none;
    font-family: 'Orbitron';
    font-weight: 400;
    box-shadow: 2px 2px 3px rgba(128, 128, 128, 0.35);
}

.hidden {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 12px;
    background-color: rgba(96, 221, 142, 1);
    transition: opacity 200ms ease-in;
}

.header {
    font-weight: 900;
    font-size: 25px;
}

@media only screen and (min-width:420px) and (max-width:800px) {
    .grid {
        width: 95%;
        height: 95%;
    }
    .display-area {
        margin-top: 70px;
        padding: 20px 30px;
    }
    .header {
        font-size: 20px;
    }
    .display-area .win-message {
        font-size: 20px;
        padding: 10px;
    }
}

@media only screen and (max-width:419px) {
    .grid {
        width: 90%;
        height: 90%;
        gap: 0.5rem;
    }
    .header {
        font-size: 18px;
    }
    .score-bar {
        font-size: 12px;
        justify-content: space-between;
        padding: 0px 20px;
    }
    .restart {
        font-size: 12px;
    }
    .display-area {
        margin-top: 50px;
        padding: 0;
    }
    .display-area .win-message {
        font-size: 14px;
        padding: 10px;
    }
}

